# WSTrade

./: Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  endpoints.py
app/core/: config.py
app/models/: models.py
app/services/: __init__.py  database.py  trading.py  websocket.py
app/tests/: conftest.py  test_database.py  test_trading.py  test_websocket.py
app/tests/jupyters/: test.ipynb
